<resources>
    <string name="app_name">AtividadePAMJanelaSplash</string>
    <string name="welcome_to_dango">Welcome To Dango</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cj_gmail_com">cj@gmail.com</string>
    <string name="register">Register</string>
    <string name="dango">Dango</string>
    <string name="profile_logo">Profile Logo</string>
</resources>