<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F8D006"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dango"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome_to_dango"
            android:textColor="@color/purple_500"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_margin="30dp"
            android:background="@drawable/image_view_background"
            android:contentDescription="@string/profile_logo"
            android:padding="40dp"
            android:src="@drawable/ic_logo_login" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_app"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_shape"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#EC6208"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_app"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/btn_shape"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="#EC6208"
            android:textSize="20sp" />
    </LinearLayout>

    </LinearLayout>